deploy/kyverno-secure-test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: secure-pod
  namespace: payments

spec:
  securityContext:
    runAsNonRoot: true

  containers:
    - name: nginx
      image: nginx:1.27.5

      securityContext:
        allowPrivilegeEscalation: false

        capabilities:
          drop:
            - ALL
