deploy/kyverno-test-pod.yaml
apiVersion: v1
kind: Pod

metadata:
  name: insecure-pod
  namespace: payments

spec:
  containers:
    - name: nginx
      image: nginx:latest
