deploy/kyverno-policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy

metadata:
  name: require-pod-security

spec:
  validationFailureAction: Enforce
  background: true

  rules:

    - name: require-run-as-non-root
      match:
        any:
          - resources:
              kinds:
                - Pod
      exclude:
        any:
          - resources:
              namespaces:
                - istio-system
                - kube-system
                - kyverno
                - argocd
      validate:
        message: "Containers must run as non-root."
        pattern:
          spec:
            securityContext:
              runAsNonRoot: true

    - name: disallow-privilege-escalation
      match:
        any:
          - resources:
              kinds:
                - Pod
      exclude:
        any:
          - resources:
              namespaces:
                - istio-system
                - kube-system
                - kyverno
                - argocd
      validate:
        message: "Privilege escalation is not allowed."
        pattern:
          spec:
            containers:
              - securityContext:
                  allowPrivilegeEscalation: false

    - name: drop-capabilities
      match:
        any:
          - resources:
              kinds:
                - Pod
      exclude:
        any:
          - resources:
              namespaces:
                - istio-system
                - kube-system
                - kyverno
                - argocd
      validate:
        message: "All Linux capabilities must be dropped."
        pattern:
          spec:
            containers:
              - securityContext:
                  capabilities:
                    drop:
                      - ALL

    - name: disallow-latest-tag
      match:
        any:
          - resources:
              kinds:
                - Pod
      exclude:
        any:
          - resources:
              namespaces:
                - istio-system
                - kube-system
                - kyverno
                - argocd
      validate:
        message: "Using the :latest image tag is not allowed. Please specify a distinct version."
        pattern:
          spec:
            containers:
              - image: "!*:latest"
